# sres

./: .gitattributes  .gitignore  .gitpod.yml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  check-all.sh  fix-all.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  upload.sh
.github/agents/: coding.agent.md
.github/workflows/: copilot-setup-steps.yml  deploy.yml  health.yml  postsubmit.yml  test.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  codebase_summary.md  egui_documentation.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  testing_strategy.md
docs/: index.md  nesdev.org.json
docs/fullsnes/: about-credits.md  arm-26bit-memory-interface.md  arm-cpu-reference.md  arm-exceptions.md  arm-flags-condition-field-cond.md  index.md  (+332 more)
sres_egui/: .gitignore  Cargo.toml  build.rs  index.html  package.json  webpack.config.js
sres_egui/roms/Programs/: colourmath.txt
sres_egui/roms/games/: TheLastSuper.sfc  TheLastSuper.sfc.xz  TheLastSuper.txt
sres_egui/roms/programs/: colourmath.sfc.xz
sres_egui/src/: app.rs  audio.rs  debug.rs  embedded_roms.rs  home.rs  lib.rs  main.rs  test_utils.rs  util.rs  wasm.rs
sres_egui/src/debug/: apu.rs  cpu.rs  event.rs  log_viewer.rs  memory.rs  ppu.rs  syntax.rs
sres_egui/web/: index.html  index.js
sres_emulator/: Cargo.toml
sres_emulator/benches/: cpu_benches.rs  rom_benches.rs  timer_benches.rs
sres_emulator/fuzz/: Cargo.toml
sres_emulator/fuzz/fuzz_targets/: program.rs  sfc.rs
sres_emulator/src/: apu.rs  bus.rs  cartridge.rs  common.rs  components.rs  controller.rs  cpu.rs  debugger.rs  dma.rs  image.rs  lib.rs  logging.rs  main_bus.rs  memory.rs  ppu.rs  spc700.rs  test_util.rs  trace.rs  uint.rs  util.rs
sres_emulator/src/apu/: apu_bus.rs  brr.rs  mod.rs  s_dsp.rs  spc700.rs  test.rs  timers.rs
sres_emulator/src/apu/spc700/: instructions.rs  opcode_table.rs  operands.rs  spc700_bus.rs
sres_emulator/src/bus/: address.rs  dma.rs  mod.rs  multiplication.rs  test.rs
sres_emulator/src/common/: address.rs  bsnes_trace.rs  bus.rs  clock.rs  constants.rs  debug_events.rs  debugger.rs  image.rs  logging.rs  memory.rs  mod.rs  system.rs  test_bus.rs  test_util.rs  trace.rs  uint.rs  util.rs
sres_emulator/src/components/: apu.rs  cartridge.rs  clock.rs  mod.rs
sres_emulator/src/components/apu/: apu_bus.rs  brr.rs  mod.rs  s_dsp.rs  spc700.rs  spc700_trace.rs
sres_emulator/src/components/apu/spc700/: opcode_table.rs
sres_emulator/src/components/cpu/: debug.rs  instructions.rs  mod.rs  opcode_table.rs  operands.rs  state.rs  status.rs  test.rs  trace.rs
sres_emulator/src/components/ppu/: cgram.rs  clock.rs  debug.rs  mod.rs  oam.rs  timer.rs  vram.rs
sres_emulator/src/components/s_dsp/: brr.rs  mod.rs  pitch.rs  test.rs  voice.rs
sres_emulator/src/components/spc700/: debug.rs  instructions.rs  mod.rs  opcode_table.rs  operands.rs  state.rs  status.rs  test.rs  trace.rs
sres_emulator/src/components/spc700/test/: 2x.json.xz  4x.json.xz  5x.json.xz  6x.json.xz  7x.json.xz  8x.json.xz  ax.json.xz  bx.json.xz  ex.json.xz  fx.json.xz
sres_emulator/src/cpu/: instructions.rs  mod.rs  opcode_table.rs  operands.rs  status.rs
sres_emulator/src/main_bus/: devices.rs  dma.rs  mod.rs  multiplication.rs
sres_emulator/src/ppu/: cgram.rs  framebuffer.rs  mod.rs  oam.rs  timer.rs  vram.rs
sres_emulator/src/spc700/: brr.rs  instructions.rs  opcode_table.rs  operands.rs  spc700_bus.rs  status.rs
sres_emulator/src/test_util/: test_bus.rs
sres_emulator/src/util/: image.rs  logging.rs  memory.rs  mod.rs  time.rs  uint.rs
sres_emulator/tests/: apu_tests.rs  cpu_tests.rs  krom_tests.rs  lib  ppu_tests.rs  rom_tests.rs  tomharte_cpu.rs  tomharte_spc700.rs  tomharte_tests.rs
sres_emulator/tests/apu_tests/: play_brr_sample.sfc  play_brr_sample.sfc.asm  play_brr_sample.spc.asm
sres_emulator/tests/asm_lib/: snes_spc700.inc
sres_emulator/tests/cpu/: CPUADC-trace.log.xz  CPUADC.sfc  CPUAND-trace.log.xz  CPUAND.sfc  CPUASL-trace.log.xz  CPUASL.sfc  CPUBIT-trace.log.xz  CPUBIT.sfc  CPUBRA-trace.log.xz  CPUBRA.sfc  CPUCMP-trace.log.xz  CPUCMP.sfc  CPUDEC-trace.log.xz  CPUDEC.sfc  CPUEOR-trace.log.xz  CPUEOR.sfc  CPUINC-trace.log.xz  CPUINC.sfc  CPUJMP-trace.log.xz  CPUJMP.sfc  CPULDR-trace.log.xz  CPULDR.sfc  CPULSR-trace.log.xz  CPULSR.sfc  CPUMOV-trace.log.xz  CPUMOV.sfc  CPUMSC-trace.log.xz  CPUMSC.sfc  CPUORA-trace.log.xz  CPUORA.sfc  CPUPHL-trace.log.xz  CPUPHL.sfc  CPUPSR-trace.log.xz  CPUPSR.sfc  CPURET-trace.log.xz  CPURET.sfc  CPUROL-trace.log.xz  CPUROL.sfc  CPUROR-trace.log.xz  CPUROR.sfc  (+9 more)
sres_emulator/tests/krom_tests/: CPUDEC-trace.log.xz  CPUMOV-trace.log.xz  CPUORA-trace.log.xz  CPUPHL-trace.log.xz  CPUSTR-trace.log.xz  PpuTiming.sfc
sres_emulator/tests/ppu_tests/: .gitignore  smw-level.snapshot  smw-map.snapshot  smw-titlescreen.snapshot  smw-titlescreen_scrolled.snapshot  smw.input.json  sprite_rendering.asm  sprite_rendering.sfc  tloz-game.snapshot  tloz-title.snapshot  tloz-triforce.snapshot  tloz.input.json
sres_emulator/tests/rom_tests/: dma_cgram.asm  dma_cgram.sfc  dma_oam.asm  dma_oam.sfc  dma_vram.asm  dma_vram.sfc  krom_adc-trace.log.xz  krom_adc.asm  krom_adc.sfc  krom_and-trace.log.xz  krom_and.asm  krom_and.sfc  krom_asl-trace.log.xz  krom_asl.asm  krom_asl.sfc  krom_bit-trace.log.xz  krom_bit.asm  krom_bit.sfc  krom_bra-trace.log.xz  krom_bra.asm  krom_bra.sfc  krom_cmp-trace.log.xz  krom_cmp.asm  krom_cmp.sfc  krom_dec-trace.log.xz  krom_dec.asm  krom_dec.sfc  krom_eor-trace.log.xz  krom_eor.asm  krom_eor.sfc  krom_hdma_redspace-trace.log.xz  krom_hdma_redspace.asm  krom_hdma_redspace.sfc  krom_inc-trace.log.xz  krom_inc.asm  krom_inc.sfc  krom_jmp-trace.log.xz  krom_jmp.asm  krom_jmp.sfc  krom_ldr-trace.log.xz  (+46 more)
sres_emulator/tests/rom_tests/lib/: base.asm  snes.inc  snes_header.asm  snes_header_ret.asm
sres_emulator/tests/tomharte_spc700/: 0x.json.xz  1x.json.xz  3x.json.xz  9x.json.xz  cx.json.xz  dx.json.xz
sres_emulator/tests/util/: test_bus.rs
(+93 files in other folders)
