[package]
name = "sres_egui"
version = "0.1.0"
authors = ["Dennis Kempin <dennis.kempin@gmail.com>"]
edition = "2021"
rust-version = "1.72"

[dependencies]
anyhow = "1.0"
argh = "0.1"
eframe = "0.33"
egui = "0.33"
egui_extras = { version = "0.33", features = ["image"] }
egui_hooks = "0.10"
image = { version = "0.25", features = ["png"] }
itertools = "0.14"
puffin = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sres_emulator = { path = "../sres_emulator" }
strum = { version = "0.27", features = ["derive"] }
log = "0.4"
lazy_static = "1.5.0"
cpal = "0.16.0"

[build-dependencies]
sres_emulator = { path = "../sres_emulator" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-chrome = "0.7"
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.22"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage"] }
puffin = { version = "0.19", features = ["web"] }

[dev-dependencies]
egui_kittest = { version = "0.31", features = ["wgpu", "snapshot"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
