[package]
name = "sres_emulator"
version = "0.1.0"
authors = ["Dennis Kempin <dennis.kempin@gmail.com>"]
edition = "2021"
rust-version = "1.65"

[lib]
bench = false

[features]
debug_log = []

[dependencies]
anyhow = "1.0"
intbits = "0.2"
itertools = "0.10"
lazy_static = "1"
packed_struct = "0.10"
thiserror = "1.0"
snafu = "0.7"
num-traits = "0.2"
xz2 = "0.1.7"
env_logger = "0.10"
log = "0.4"
ansi-colors-macro = "0.1"
once_cell = "1"
colored = "2"
image = { version = "0.24", features = ["png"] }

[dev-dependencies]
tempfile = "3.5"
pretty_assertions = "1.3"
criterion = "0.4"
serde = "*"
serde_json = "*"

[[bench]]
name = "cpu_benches"
harness = false

