[package]
name = "sres_emulator"
version = "0.1.0"
authors = ["Dennis Kempin <dennis.kempin@gmail.com>"]
edition = "2021"
rust-version = "1.72"

[lib]
bench = false

[features]
debug_log = []

[dependencies]
anyhow = "1.0"
intbits = "0.2"
lazy_static = "1"
packed_struct = "0.10"
num-traits = "0.2"
env_logger = "0.10"
log = "0.4"
colored = "2"
serde = "*"
puffin = "0.18"

[dev-dependencies]
tempfile = "3.5"
itertools = "0.10"
pretty_assertions = "1.3"
criterion = "0.5"
serde_json = "*"
xz2 = "0.1"
image = { version = "0.24", features = ["png"] }
bincode = "1.3"

[[bench]]
name = "rom_benches"
harness = false

