[package]
name = "sres_emulator"
version = "0.1.0"
authors = ["Dennis Kempin <dennis.kempin@gmail.com>"]
edition = "2021"
rust-version = "1.72"

[lib]
bench = false

[features]
debug_log = []

[dependencies]
anyhow = "1.0"
intbits = "0.2"
packed_struct = "0.10"
num-traits = "0.2"
env_logger = "0.11"
log = "0.4"
colored = "3"
puffin = "0.19"
itertools = "0.14"
strum = { version = "0.27", features = ["derive"] }
bilge = "0.2"
bitcode = "0.6.6"
hound = "3.5"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
criterion = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xz2 = "0.1"
image = { version = "0.25", features = ["png"] }
rasciigraph = "0.2"

[[bench]]
name = "rom_benches"
harness = false

[[bench]]
name = "timer_benches"
harness = false
