[package]
name = "sres_emulator-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.sres_emulator]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "program"
path = "fuzz_targets/program.rs"
test = false
doc = false

[[bin]]
name = "sfc"
path = "fuzz_targets/sfc.rs"
test = false
doc = false
